Agrego funciones del crud de usuario
